@startuml

title __WINDOWS's Class Diagram__\n

  namespace orders {
    namespace view.windows {
      class orders.view.windows.LoginWindow {
          - buttonsBox : Box
          - jFrame : JFrame
          - loginBox : Box
          - loginButton : JButton
          - loginLabel : JLabel
          - loginTextField : JTextField
          - mainBox : Box
          - passwordBox : Box
          - passwordField : JPasswordField
          - passwordLabel : JLabel
          - registerButton : JButton
          + LoginWindow()
      }
    }
  }
  

  namespace orders {
    namespace view.windows {
      class orders.view.windows.MainWindow {
          - contentBox : Box
          - jFrame : JFrame
          - mainBox : Box
          - menu : JMenuBar
          + MainWindow()
          + refresh()
      }
    }
  }
  

  namespace orders {
    namespace view.windows {
      class orders.view.windows.OpenOrderWindow {
          - costField : JTextField
          - costLabel : JLabel
          - descriptionField : JTextArea
          - descriptionLabel : JLabel
          - jFrame : JFrame
          - mainBox : JPanel
          - openButton : JButton
          - slotsField : JTextField
          - slotsLabel : JLabel
          - style : ButtonGroup
          - style3D : JRadioButton
          - styleAnimation : JRadioButton
          - styleDigital : JRadioButton
          - styleLabel : JLabel
          - styleOther : JRadioButton
          - styleTraditional : JRadioButton
          - type : ButtonGroup
          - typeDescription : JRadioButton
          - typeFree : JRadioButton
          - typeLabel : JLabel
          + OpenOrderWindow()
      }
    }
  }
  

  namespace orders {
    namespace view.windows {
      class orders.view.windows.ProfileEditorWindow {
          - confirmPasswordBox : Box
          - confirmPasswordField : JPasswordField
          - confirmPasswordLabel : JLabel
          - editButton : JButton
          - infoLabel : JLabel
          - infoTextField : JTextArea
          - isArtistCheckBox : JCheckBox
          - jFrame : JFrame
          - mainBox : Box
          - newPasswordBox : Box
          - newPasswordField : JPasswordField
          - newPasswordLabel : JLabel
          - oldPasswordBox : Box
          - oldPasswordField : JPasswordField
          - oldPasswordLabel : JLabel
          - usernameLabel : JLabel
          + ProfileEditorWindow()
      }
    }
  }
  

  namespace orders {
    namespace view.windows {
      class orders.view.windows.RegisterWindow {
          - buttonsBox : Box
          - confirmBox : Box
          - confirmField : JPasswordField
          - confirmLabel : JLabel
          - infoTextField : JTextArea
          - isArtistCheckBox : JCheckBox
          - jFrame : JFrame
          - loginBox : Box
          - loginLabel : JLabel
          - loginTextField : JTextField
          - mainBox : Box
          - passwordBox : Box
          - passwordField : JPasswordField
          - passwordLabel : JLabel
          - registerButton : JButton
          + RegisterWindow()
      }
    }
  }
  

  namespace orders {
    namespace view.windows {
      class orders.view.windows.SearchWindow {
          - applyButton : JButton
          - costField : JTextField
          - costLabel : JLabel
          - filterPanel : JPanel
          - jFrame : JFrame
          - mainBox : Box
          - resultPanel : JPanel
          - searchButton : JButton
          - style3D : JCheckBox
          - styleAnimation : JCheckBox
          - styleDigital : JCheckBox
          - styleOther : JCheckBox
          - styleTraditional : JCheckBox
          - typeDescription : JCheckBox
          - typeFree : JCheckBox
          + SearchWindow()
      }
    }
  }
  

  orders.view.windows.MainWindow o-- orders.view.panels.OrdersPanel : ordersPanel
  orders.view.windows.MainWindow o-- orders.view.panels.ProfilePanel : profilePanel
  orders.view.windows.MainWindow o-- orders.model.entities.User : user
  orders.view.windows.MainWindow o-- orders.view.panels.UsersPanel : usersPanel


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
